Fix config template

--- a/sample_templates/generic/config_template.yaml
+++ b/sample_templates/generic/config_template.yaml
@@ -6,7 +6,7 @@ embeddings:
   
   embedding_model: # Optional embedding model specification, default is e5-large-v2. Swap to a smaller model if out of CUDA memory
     type: sentence_transformer # other supported types - "huggingface" and "instruct"
-    model_name: "infloat/e5-large-v2"
+    model_name: "intfloat/e5-large-v2"
   
   splade_config: # Optional batch size of sparse embeddings. Reduce if getting out-of-memory errors on CUDA.
     n_batch: 5
