--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,28 @@
-llama-cpp-python
-chromadb~=0.4
-langchain~=0.1
-pydantic~=2.5
-transformers~=4.36
-sentence-transformers==2.2.2
+llama-cpp-python==0.2.78
+chromadb~=0.5
+langchain~=0.2.4
+langchain-community~=0.2.4
+langchain-openai~=0.1.8
+langchain-huggingface~=0.0.3
+pydantic~=2.7
+transformers~=4.41
+sentence-transformers==3.0.1
 pypdf2~=3.0.1
 ebooklib==0.18
-sentencepiece==0.1.99
+# sentencepiece==0.20
 setuptools==67.7.2
 loguru
 python-dotenv
 accelerate~=0.22.0
 protobuf==3.20.2
 termcolor
-openai~=1.8
+openai~=1.34.0
 einops # required for Mosaic models
 click 
-bitsandbytes==0.42.0
+bitsandbytes==0.43.1
 # auto-gptq==0.2.0
 InstructorEmbedding==1.0.1
-unstructured~=0.12.4
+unstructured~=0.14.5
 pymupdf==1.22.5
 streamlit~=1.28
 python-docx~=1.1
@@ -30,7 +33,7 @@ starlette==0.27.0 ; python_version >= "3.10" and python_version < "4.0"
 sympy==1.11.1 ; python_version >= "3.10" and python_version < "4.0"
 tenacity==8.2.3 ; python_version >= "3.10" and python_version < "4.0"
 threadpoolctl==3.1.0 ; python_version >= "3.10" and python_version < "4.0"
-tiktoken==0.3.3 ; python_version >= "3.10" and python_version < "4.0"
-tokenizers==0.15.0; python_version >= "3.10" and python_version < "4.0"
+tiktoken==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
+tokenizers==0.19.1; python_version >= "3.10" and python_version < "4.0"
 tqdm==4.65.0 ; python_version >= "3.10" and python_version < "4.0"
 # transformers==4.29.2 ; python_version >= "3.10" and python_version < "4.0"
