--- a/sample_templates/pdf_library.yaml
+++ b/sample_templates/pdf_library.yaml
@@ -34,3 +34,8 @@ semantic_search:
   query_prefix: "query: "
   hyde:
     enabled: True
+
+  conversation_history_settings:
+    enabled: True
+    max_history_length: 3
+    rewrite_query: True
