Initial implementation of azure doc intelligence parser

--- a/.env_template
+++ b/.env_template
@@ -2,3 +2,7 @@ OPENAI_API_KEY=<<<YOUR_API_KEY>>>
 
 # Only if using image parsing using Gemini
 GOOGLE_API_KEY=<<<YOUR_API_KEY>>>
+
+# Only if using table parsing using azure document intelligence
+AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT=<< AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT >>
+AZURE_DOCUMENT_INTELLIGENCE_KEY=<< AZURE_DOCUMENT_INTELLIGENCE_KEY >>
