--- a/sample_templates/test-templates/pdf_library.yaml
+++ b/sample_templates/test-templates/pdf_library.yaml
@@ -17,14 +17,14 @@ embeddings:
       - epub
       - md
       - pdf
-    pdf_table_parser: gmft
-    pdf_image_parser:
-        image_parser: gemini-1.5-pro # gemini-1.5-flash
-        system_instructions: |
-            You are an research assistant. You analyze the image to extract detailed information. Response must be a Markdown string in the follwing format:
-            - First line is a heading with image caption, starting with '# '
-            - Second line is empty
-            - From the third line on - detailed data points and related metadata, extracted from the image, in Markdown format. Don't use Markdown tables.
+    pdf_table_parser: azuredoc # gmft
+    # pdf_image_parser:
+    #     image_parser: gemini-1.5-pro # gemini-1.5-flash
+    #     system_instructions: |
+    #         You are an research assistant. You analyze the image to extract detailed information. Response must be a Markdown string in the follwing format:
+    #         - First line is a heading with image caption, starting with '# '
+    #         - Second line is empty
+    #         - From the third line on - detailed data points and related metadata, extracted from the image, in Markdown format. Don't use Markdown tables.
     passage_prefix: "passage: "
 
 
