--- a/sample_templates/generic/config_template.yaml
+++ b/sample_templates/generic/config_template.yaml
@@ -31,6 +31,19 @@ embeddings:
         merge_sections: False # Merge # headings if possible, can be turned on and off depending on document stucture
         remove_images: True # Remove image links
     
+    # Optional setting
+    pdf_table_parser: gmft # azuredoc
+
+    # Optional setting
+    pdf_image_parser:
+        image_parser: gemini-1.5-pro # gemini-1.5-flash
+        system_instructions: |
+            You are an research assistant. You analyze the image to extract detailed information. Response must be a Markdown string in the follwing format:
+            - First line is a heading with image caption, starting with '# '
+            - Second line is empty
+            - From the third line on - detailed data points and related metadata, extracted from the image, in Markdown format. Don't use Markdown tables.
+
+    
     passage_prefix: "passage: " # Often, specific prefix needs to be included in the source text, for embedding models to work properly
     label: "documment-collection-1" # Add a label to the current collection
   
