--- a/sample_templates/llm/openai.yaml
+++ b/sample_templates/llm/openai.yaml
@@ -15,4 +15,4 @@ llm:
          ### Question: {question}
     model_kwargs:
       temperature: 0.0
-      model_name: gpt-3.5-turbo
+      model_name: gpt-4o-mini
