--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ temp_data/
 sample_templates/obsidian_conf_test.yaml
 sample_templates/test-templates/*
 .venv2
+.github/prompts
 
 # Distribution / packaging
 .Python
